fix: minor updates

--- a/src/app/demo/read-me/read-me.component.html
+++ b/src/app/demo/read-me/read-me.component.html
@@ -4,4 +4,8 @@
   A Full Stack Payment solution for Angular 5.x apps. 
 </p>
 
-<!-- <img src="/assets/stripe.png" width="100%" alt="Angular Firebase Stripe Full Stack Demo"> -->
+<p>
+  <a href="https://projects.angularfirebase.com/p/stripe-payments-with-angular-and-firebase" target="_blank">
+    Full Course
+  </a>
+</p>
