--- a/src/app/demo/stripe-dashboard/stripe-dashboard.component.html
+++ b/src/app/demo/stripe-dashboard/stripe-dashboard.component.html
@@ -27,6 +27,8 @@
 
 <p><em>Retrieves the <a href="https://stripe.com/docs/api#customers">customer</a> subscriptions from stripe. </em></p>
 
+<p>Component Usage: <code>&lt;user-subscriptions&gt;&lt;/user-subscriptions&gt;</code></p>
+
 <div class="card card-content">
     <user-subscriptions></user-subscriptions>
 </div>
